Fix: enable Prisma client generation for Vercel

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -44,6 +44,6 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "5.8.3",
-    "vercel": "^25.2.0"
+    "vercel": "^41.7.0"
   }
 }
