--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.7.0",
     "@storybook/nextjs": "^8.6.12",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
@@ -25,6 +25,7 @@
     "lucide-react": "^0.503.0",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
+    "prisma": "^6.7.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
@@ -39,7 +40,6 @@
     "autoprefixer": "^10.4.21",
     "next-intl": "^4.0.2",
     "postcss": "^8.5.3",
-    "prisma": "^6.7.0",
     "tailwindcss": "^4.1.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
